set up sysid collection